--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -10,4 +10,5 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Senha</string>
     <string name="error_wrong_password">Senha incorreta</string>
+    <string name="endereco">Endereço</string>
 </resources>
