--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">goldark</string>
     <string name="error_wrong_password">Wrong Password</string>
+    <string name="endereco">Endereço</string>
 </resources>
