--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">goldark</string>
+    <string name="app_name">Android Pro - Goldark</string>
     <string name="action_sign_in">Entrar ou registrar</string>
     <string name="action_sign_in_short">Entrar</string>
     <string name="error_field_required">Este campo é obrigatório</string>
